~fixed profile dialog image size (was shifting layout on laod)

--- a/react/src/Components/SideNav/SideNav.module.scss
+++ b/react/src/Components/SideNav/SideNav.module.scss
@@ -309,6 +309,8 @@ $breakpoint: calc(50rem + 84px + 29rem);
   
   img {
     border-radius: var(--roundness);
+    width: 100px;
+    height: 100px;
     max-width: 100px;
     max-height: 100px;
   }
